[tool.poetry]
name = "pyved"
version = "0.0.3"
description = ""
authors = ["moonb3ndr <thomas.iw@kata.games>"]
readme = "README.md"
packages = [{include = "pyved", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
pygame-gui = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
